get rid of jekyll, make simpler

--- a/index.html
+++ b/index.html
@@ -1,8 +1,54 @@
----
-layout: default
-title: Hank Quinlan, Horrible Cop
----
-<div class="blurb">
-	<h1>Hi there, I'm Hank Quinlan!</h1>
-	<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
-</div><!-- /.blurb -->
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <title>Matt Garnett</title>
+    <link rel="stylesheet" type="text/css" href="assets/css/styles.css">
+    
+    <script type="text/javascript">
+      var sc_project=12135481; 
+      var sc_invisible=1; 
+      var sc_security="aa322d81"; 
+      var sc_https=1; 
+      var sc_remove_link=1; 
+    </script>
+
+    <script type="text/javascript"
+      src="https://www.statcounter.com/counter/counter.js" async>
+    </script>
+
+    <noscript>
+      <div class="statcounter">
+        <img class="statcounter" 
+          src="https://c.statcounter.com/12135481/0/aa322d81/1/" 
+          alt="site stats">
+      </div>
+    </noscript>
+  </head>
+  <body>
+    <div class="container">
+      <table class="table">
+        <tr>
+          <th>name</th>
+          <td>matt garnett</td>
+        </tr>
+        <tr>
+          <th>job</th>
+          <td>research engineer</td>
+        </tr>
+        <tr>
+          <th>company</th>
+          <td>consensys["quilt"]</td>
+        </tr>
+        <tr>
+          <th>twitter</th>
+          <td><a href="https://twitter.com/matt_garnett">@matt_garnett</a></td>
+        </tr>
+        <tr>
+          <th>github</th>
+          <td><a href="https://github.com/lightclient">@lightclient</a></td>
+        </tr>
+      </table>
+    </div>
+  </body>
+</html>
