add media queries for mobile device

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Matt Garnett</title>
     <link rel="stylesheet" type="text/css" href="assets/css/styles.css">
+
+    <!-- Oi! What are you looking for in here? -->
     
     <script type="text/javascript">
       var sc_project=12135481; 
