update twitter handle

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </tr>
         <tr>
           <th>twitter</th>
-          <td><a href="https://twitter.com/matt_garnett">@matt_garnett</a></td>
+          <td><a href="https://twitter.com/lightclients">@lightclients</a></td>
         </tr>
         <tr>
           <th>github</th>
