--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
         </tr>
         <tr>
           <th>job</th>
-          <td>research engineer</td>
+          <td>software engineer</td>
         </tr>
         <tr>
           <th>company</th>
-          <td>consensys["quilt"]</td>
+          <td>ef["geth"]</td>
         </tr>
         <tr>
           <th>twitter</th>
